--- a/CSS/CSS06-Float/CSS06-ExercicioCasa/style.css
+++ b/CSS/CSS06-Float/CSS06-ExercicioCasa/style.css
@@ -1,69 +1,78 @@
-html {
-    background-color: rgb(255, 255, 255);
-}
-
 body {
     margin: auto;
-    width: 60%;
-    height: 100%;
-    background-color: rgb(243, 225, 151);
-}
-
-figure{
-    margin: 10px;
-}
-
-#comeco {
-    width: 20%;
-}
-
-main {
-    width: 100%;
+    width: 80%;
+    font-family: "Exo 2", sans-serif;
     border: 1px solid black;
 }
 
-
-div {
-    border: 1px solid black;
-    height:300px;
+.container {
+    padding: 2em;
+    font-family: "Exo 2", sans-serif;
+    background-color: #729998;
 }
 
+#imgtitulo {
+    width: 7em;
+    height: 80px;
+}
+
+#titulo1{
+    color: blue;
+}
 
 figure {
-    border: 1px solid black;
-    width: 30%;
-    height: 20vh;
-    background-position: center;
-    
+    width: 250px;
+    padding: 5px;
+    border: 2px solid #000000;
+}
+
+figcaption {
+    font-size: 1.2em;
+    text-align: center;
+    padding: 5px;
+}
+
+p {
+    font-size: 1.3em;
 }
 
 img {
+    width: 250px;
+    height: 200px;
+}
+
+.images {
+    border: 1px solid #000000;
     width: 100%;
-    height: 90%;
-}
-
-#cima {
-    float: none;
-}
-
-#esquerda {
     float: left;
 }
 
-#direita {
+.FF1 {
+    float: none;
+}
+
+
+.MFMF {
+    float: left;
+}
+
+.FFT {
     float: right;
 }
 
-
-.img1{
-    float: left; 
-    width: 30%;
+.FF4{
+    float: left;
 }
 
-#img2{
-float: right;
+.tentativa{
+    clear: none;
 }
 
-footer, h2,p{
-    margin-left: 10px;
+.FF5{
+    float: right;
+}
+
+footer{
+    font-size: 1.3em;
+    font-family: "Exo 2", sans-serif;
 }
